First draft on issue with horizontal scroll on mobile
Must be fine-tuned

--- a/src/components/pages/ComparisonPage/ComparisonRow.module.scss
+++ b/src/components/pages/ComparisonPage/ComparisonRow.module.scss
@@ -18,10 +18,22 @@
   }
   > * {
     flex: 0 0 $column-width;
-    @for $i from 1 to 10 {
-      @media (max-width: $i*$column-width) {
-        &:nth-child(#{$i}) {
-          display: none;
+    @media (max-width: 575px) {
+      flex: 0 0 $column-width-mobile;
+      @for $i from 1 to 10 {
+        @media (max-width: $i*$column-width-mobile) {
+          &:nth-child(#{$i}) {
+            display: none;
+          }
+        }
+      }
+    }
+    @media (min-width: 576px) {
+      @for $i from 1 to 10 {
+        @media (max-width: $i*$column-width) {
+          &:nth-child(#{$i}) {
+            display: none;
+          }
         }
       }
     }
